@@ -322,7 +322,7 @@ http://www.veripool.org/dinotrace\n\
 Written by Wilson Snyder\n\
 <wsnyder@wsnyder.org>\n\
 \n\
-Copyright 1998-2011 by Wilson Snyder\n\
+Copyright 1998-2014 by Wilson Snyder\n\
 Copyright 1993-1997 by Digital Equipment Corporation.\n\
 This software is covered by the GNU Public License,\n\
 and is WITHOUT ANY WARRANTY.\n\
